# sigint

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: sigintConfig.cmake
docs/: README.sigint
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  sigint_sig.xml  sigint_sigmaaa.xml
include/sigint/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_sigint.cc  qa_sigint.h  test_sigint.cc
python/: CMakeLists.txt  __init__.py  sig.py  sigmaaa.py
swig/: CMakeLists.txt  sigint_swig.i
